@@ -45,6 +45,8 @@ VERSION 4.1.4
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
 -------------------------------------------------------------------------------------------
++$pgv_lang["SHOW_EST_LIST_DATES_help"] 13 Apr 2008				A
++$pgv_lang["SHOW_EST_LIST_DATES"]      13 Apr 2008				A
 *$pgv_lang["ABBREVIATE_CHART_LABELS_help"]			26 Mar 2008				W
 *$pgv_lang["PEDIGREE_FULL_DETAILS"]					21 Mar 2008				w
 *$pgv_lang["PEDIGREE_FULL_DETAILS_help"]			21 Mar 2008				w
