@@ -293,6 +293,8 @@ $pgv_lang["NAME_FROM_GEDCOM_help"]	= "~#pgv_lang[NAME_FROM_GEDCOM]#~<br /><br />
 $pgv_lang["SHOW_ID_NUMBERS_help"]	= "~#pgv_lang[SHOW_ID_NUMBERS]#~<br /><br />This option controls whether or not to show ID numbers in parentheses after names on charts and lists.<br />";
 $pgv_lang["SHOW_LAST_CHANGE"]		= "Show GEDCOM record last change date on lists";
 $pgv_lang["SHOW_LAST_CHANGE_help"]	= "~#pgv_lang[SHOW_LAST_CHANGE]#~<br /><br />This option controls whether or not to show GEDCOM record last change date on lists.<br />";
+$pgv_lang["SHOW_EST_LIST_DATES"]		= "Show estimated dates for birth and death";
+$pgv_lang["SHOW_EST_LIST_DATES_help"]	= "~#pgv_lang[SHOW_EST_LIST_DATES]#~<br /><br />This option controls whether or not to show estimated dates for birth and death instead of leaving blanks on individual lists for individuals whose dates are not known.<br />";
 $pgv_lang["SHOW_PEDIGREE_PLACES"]	= "Place levels to show in person boxes";
 $pgv_lang["SHOW_PEDIGREE_PLACES_help"]	= "~#pgv_lang[SHOW_PEDIGREE_PLACES]#~<br /><br />This sets how much of the place information is shown in the person boxes on charts.<br /><br />Setting the value to 9 will guarantee to show all place levels.  Setting the value to 0 will hide places completely.  Setting the value to 1 will show the first level, setting it to 2 will show the first two levels, etc.<br />";
 $pgv_lang["MULTI_MEDIA"]		= "Enable multimedia features";
